# Big-Data-Project-AERO

./: .dockerignore  .gitignore  DEPLOYMENT-GUIDE.md  Dockerfile  LICENSE  Makefile  README-DEPLOYMENT.md  README-REFACTOR.md  README.md  REFACTOR-COMPLETE.md  REFACTOR-SUMMARY.md  build-and-push.sh  deploy.sh  docker-compose.yaml  load_historical_data.py  pyproject.toml  requirements.in  requirements.txt  setup_bigquery.py  spark_transformation.py  temp.ipynb  test.py  test_aviation.py  test_pipeline.py
analytics/: README.md  flight_analytics.py
aviation_stack/: docker-compose.yml  docker-setup.sh  kafka-setup.sh  kafka_producer.py  requirements.txt  spark_consumer.dockerfile  spark_consumer.py
config/: pipeline_config.yaml  settings.py
data/: US_Bearu_monthly.json  aviation_realtime.json  test.json
docker/: Dockerfile
flow/: clean_data.py  clean_data_orchestrator.py  collect_data.py  collect_data_flow.py  collect_data_gcs.py  convert_csv_to_parquet.py  convert_data_orchestrator.py  get_bucket_metadata.py  helpers.py  merge_parquet.py
k8s/: deployment.yaml
kafka/: avro_producer.py  consumer.py  consumer_streaming.py  docker-compose.yml  flight.py  json_producer.py  key_schema.avsc  parsers.py  producer.py  producer1.py  producer2.py  schema_registry_client.py  settings.py  utils.py
kubernetes/: deployment.yaml  kafka-infrastructure.yaml  spark-deployment.yaml
spark/: test.py  (+6 more)
us_bearu_monthly/: dockerfile  main.py  pyproject.toml
us_bearu_monthly/api/v1/: router.py
us_bearu_monthly/app/: main.py
us_bearu_monthly/app/api/v1/endpoints/: us_bearu.py
(+44 files in other folders)
