[project]
name = "big-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.18"
dependencies = [
    "confluent-kafka==2.12.0",
    "docker==7.1.0",
    "google-cloud-bigquery==3.40.0",
    "google-cloud-storage==3.4.1",
    "kafka-python==2.2.15",
    "kiwisolver==1.4.9",
    "matplotlib==3.10.8",
    "pandas==2.3.3",
    "prefect==3.4.24",
    "prefect-shell==0.3.1",
    "pyspark==3.5.4",
    "pyarrow==14.0.1",
    "pyyaml==6.0.3",
    "requests==2.32.5",
    "seaborn==0.13.2",
    "fastapi>=0.119.1",
    "numpy<2.0",
    "beautifulsoup4>=4.14.3",
    "uvicorn>=0.40.0",
]
